# openbrep

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL_CN.md  PRODUCT.md  README.md  README.zh-CN.md  config.example.toml  install.sh  obr7  openbrep.spec  pyproject.toml  run_tests.py  start.command
benchmark/: README.md  assertions.py  runner.py  schema.py
cli/: main.py
docs/: AI_DEVELOPMENT_GUIDE.md  AI_DEVELOPMENT_GUIDE.zh-CN.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  ARCHITECTURE_TOP_LEVEL_PATH.zh-CN.md  CODEX_HANDOFF_BETA_P2_P4.md  CUSTOM_SKILLS.zh-CN.md  DESKTOP_SHELL_EVALUATION.md  GDL_COMMERCIAL_SKILL_PLAN.zh-CN.md  GDL_KNOWLEDGE_VERIFICATION_PLAN.zh-CN.md  MANUAL_TEST_CHECKLIST.zh-CN.md  PROJECT_CLOSURE_STATUS.zh-CN.md  REACT_WORKBENCH_BETA_HANDOFF.md  REACT_WORKBENCH_BETA_PLAN.md  REACT_WORKBENCH_CHECKPOINT_2026-05-31.md  REACT_WORKBENCH_MAIN_UI_AUDIT.md  REACT_WORKBENCH_MERGE_READINESS_REPORT.md  REACT_WORKBENCH_POC.md  REACT_WORKBENCH_PR_NOTES.md  RELEASE_CHECKLIST.zh-CN.md  RELEASE_PROCESS.md  VISION.md  WORKBENCH_FILE_FLOW_DESIGN.zh-CN.md  WORKBENCH_FILE_FLOW_IMPLEMENTATION_PLAN.zh-CN.md  code_health_report.md  gdl-agent-testing-guide.md  install_distribution_strategy_2026-05-01.md  manual.md  pro_commercialization_v1.md  project_layout.md  v0.7_revision_management_design.md
evals/: README.md  prepare_fixtures.py
examples/: Bookshelf.gdl  dou.gdl
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gdl_agent/: __init__.py  compiler.py  core.py  gdl_parser.py  hsf_project.py  llm.py  paramlist_builder.py
ui/: app.py  (+32 more)
(+368 files in other folders)
